rust/src/snapshots/ssalang2__irprint__tests__colored_output.snap
---
source: src/irprint.rs
expression: uncolored_output
---
; === CONSTANTS & UNSCHEDULED ===
c1:    const_i32  42  ; i32

; === FUNCTION CODE ===
; Block b1:
       ret        c1
