rust/src/snapshots/ssalang2__irprint__tests__comprehensive_example.snap
---
source: src/irprint.rs
expression: output
---
; === CONSTANTS & UNSCHEDULED ===
c3:    const_i32  10  ; i32
c2:    const_bool true  ; bool
c1:    const_i32  42       ; i32

; === FUNCTION CODE ===
; Block b1:
i2:    add        c1, c3  ; i32
i3:    eq         i2, c1  ; bool
       branch     i3, b2, b3
; Block b2:
       print      c1
       ret        c1
; Block b3:
       ret        c3
