rust/src/snapshots/ssalang2__irprint__tests__scheduled_instructions.snap
---
source: src/irprint.rs
expression: output
---
; === CONSTANTS & UNSCHEDULED ===
c1:    const_i32  42  ; i32

; === FUNCTION CODE ===
; Block b1:
       print      c1
       ret        c1
